se agrega el titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
    <div class="content">
-        <div class="elemento"></div>
+        <div class="elemento">
+            <center>
+                mi nombre es santiago
+            </center>
+        </div>
         <div class="elemento"></div>
         <div class="elemento"></div>
    </div>
